Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Bug Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note


13-Oct-2009 Andrew Eddie
^ Reverse the order of Publisher, Editor and Author groups to match admin groups direction.
^ Change label of 'inherit' in Global Config permissions.

11-Oct-2009 Ron Severdia
^ Standardized all list filters
^ Front-end core output cleanup

11-Oct-2009 Hannes Papenberg
+ Adding class to radio button labels

10-Oct-2009 Ron Severdia
^ Replaced tables with CSS
# Reworked CSS class structure
^ Added classes to components still using JParam (emulate JForm)
^ Moved com_redirect CSS to main template.css
# Com_config UI fix and language fix
# Redirect component UI cleanup
# Search component UI cleanup
# Com_templates UI cleanup
# Com_users UI cleanup
# Com_weblinks UI fixes
- Removed beez template
# Com_categories UI fixes
# Com_modules UI fixes
^ Replace inline styles with classes

09-Oct-2009 Mark Dexter
+ Added categories views to weblinks, newsfeeds, contacts (Elin Waring)
^ Redid frontend layouts for contacts and newsfeeds (Andrea Tarr)
# Fixed error in Add New Access Level
^ Moved css files of classes that replace inline styles to _html folder in milkyway (Andrea Tarr)
# Fixed contact picker modal (Elin Waring)
^ Moved SetState from controllers to models (Elin Waring)

09-Oct-2009 Hannes Papenberg
^ Removed the root_user feature.
# Fixed the userprofile in the backend. This still needs some changes.

08-Oct-2009 Ercan Ozkaya
# Converted clone calls to be statements

08-Oct-2009 Andrew Eddie
+ Added SERVER_UTC and USER_UTC filters to JForm::filter to convert user supplied dates to UTC server or UTC user time respectively.
+ Added access argument to JHtmlJGrid::published to only display the icon without click action if not permitted to perform the action.
+ Added save-as-copy support to JControllerForm.